# esp-idf

components/esp_ringbuf/: ringbuf.c
components/freertos/: port_systick.c
components/freertos/FreeRTOS-Kernel-SMP/: event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
components/freertos/FreeRTOS-Kernel-SMP/include/freertos/: FreeRTOS.h  task.h
components/freertos/FreeRTOS-Kernel-SMP/portable/xtensa/: port.c
components/freertos/FreeRTOS-Kernel-SMP/portable/xtensa/include/freertos/: portmacro.h
components/freertos/config/include/freertos/: FreeRTOSConfig.h
components/freertos/test_apps/freertos/kernel/tasks/: test_freertos_hooks.c  test_preemption.c  test_vTaskSuspendAll_xTaskResumeAll.c
components/freertos/test_apps/freertos/misc/: test_idf_additions.c
components/freertos/test_apps/freertos/performance/: CMakeLists.txt
components/freertos/test_apps/freertos/performance/crit_speed/: crit_speed.c
components/freertos/test_apps/freertos/performance/lock_contention_end_to_end/: lock_contention_end_to_end.c  test_config.h
components/freertos/test_apps/freertos/performance/queue_contention/: queue_contention.c
components/freertos/test_apps/freertos/performance/queue_speed/: queue_speed.c
components/freertos/test_apps/freertos/port/: test_spinlocks.c
components/newlib/platform_include/sys/: lock.h
